--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -16,12 +16,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
           java-version: '23'
           distribution: 'temurin'
+
+      - name: Debug File Existence
+        run: ls -R src/main/resources/db/changelog/
 
       - name: Run Liquibase Migrations
         run: mvn liquibase:update -Dliquibase.url=${{ secrets.DB_URL }} -Dliquibase.username=${{ secrets.DB_USER }} -Dliquibase.password=${{ secrets.DB_PASSWORD }} -Dliquibase.changeLogFile=${{ env.SOURCE_PATH }}
