--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 env:
-  SOURCE_PATH: 'db/changelog/db.changelog-master.xml'
+  SOURCE_PATH: 'src/main/resources/db/changelog/db/changelog/db.changelog-master.xml'
 
 jobs:
   liquibase-migrate:
