--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -82,31 +82,31 @@ jobs:
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.SERVICE_ACCOUNT }}
 
-      - name: Set Project
-        run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }}
-
-      - name: Add Google Cloud SDK distribution URI as package source
-        run: |
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-          sudo apt-get install apt-transport-https ca-certificates gnupg
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-
-      - name: Update package list
-        run: sudo apt-get update -y
-
-      - name: Install GKE Auth Plugin
-        run: sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-      - name: Download Updated Deployment Manifest
-        uses: actions/download-artifact@v4
-        with:
-          name: deployment-manifest
-          path: k8s
-
-      - name: Debug Deployment YAML
-        run: cat k8s/liquibase-job.yml
+#      - name: Set Project
+#        run: |
+#          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+#          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }}
+#
+#      - name: Add Google Cloud SDK distribution URI as package source
+#        run: |
+#          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+#          sudo apt-get install apt-transport-https ca-certificates gnupg
+#          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+#
+#      - name: Update package list
+#        run: sudo apt-get update -y
+#
+#      - name: Install GKE Auth Plugin
+#        run: sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+#
+#      - name: Download Updated Deployment Manifest
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: deployment-manifest
+#          path: k8s
+#
+#      - name: Debug Deployment YAML
+#        run: cat k8s/liquibase-job.yml
 
 #      - name: Deploy to GKE
 #        run: |
