deploy liquibase.yml

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -108,8 +108,7 @@ jobs:
       - name: Debug Deployment YAML
         run: cat k8s/liquibase-job.yml
 
-#      - name: Deploy to GKE
-#        run: |
-#          kubectl get namespace $GKE_NAMESPACE || kubectl create namespace $GKE_NAMESPACE
-#          kubectl apply -f k8s/deployment.yml -n $GKE_NAMESPACE
-#          kubectl rollout restart deployment grab-api-gateway -n $GKE_NAMESPACE
+      - name: Deploy to GKE
+        run: |
+          kubectl get namespace $GKE_NAMESPACE || kubectl create namespace $GKE_NAMESPACE
+          kubectl apply -f k8s/liquibase-job.yml -n $GKE_NAMESPACE
